[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.08, 0.1, 0.14, 0.85)
border_color = Color(0.9, 0.85, 0.7, 0.6)
border_width_all = 2
corner_radius_all = 8

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.98, 0.82, 0.2, 1)
corner_radius_all = 4

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.18, 0.16, 0.08, 1)
corner_radius_all = 4

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.9, 0.2, 0.2, 1)
corner_radius_all = 4

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.22, 0.08, 0.08, 1)
corner_radius_all = 4

[node name="HUD" type="CanvasLayer"]
process_mode = 2
script = ExtResource(1)

[node name="TopCenter" type="CenterContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 10.0
offset_right = 0.0
offset_bottom = 130.0

[node name="Panel" type="PanelContainer" parent="TopCenter"]
theme_override_styles/panel = SubResource(1)

[node name="Margin" type="MarginContainer" parent="TopCenter/Panel"]
custom_minimum_size = Vector2(420, 90)
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="Stack" type="VBoxContainer" parent="TopCenter/Panel/Margin"]
alignment = 1

[node name="TierLabel" type="Label" parent="TopCenter/Panel/Margin/Stack"]
text = "TIER 1"
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_outline_color = Color(0.05, 0.06, 0.08, 0.9)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 26

[node name="ObjectiveLabel" type="Label" parent="TopCenter/Panel/Margin/Stack"]
text = "Objective"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.9, 0.92, 0.98, 0.95)
theme_override_colors/font_outline_color = Color(0.06, 0.08, 0.12, 0.9)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16

[node name="FishRow" type="HBoxContainer" parent="TopCenter/Panel/Margin/Stack"]

[node name="FishLabel" type="Label" parent="TopCenter/Panel/Margin/Stack/FishRow"]
text = "FISH EATEN"
theme_override_colors/font_color = Color(1, 0.95, 0.7, 1)

[node name="FishBar" type="ProgressBar" parent="TopCenter/Panel/Margin/Stack/FishRow"]
custom_minimum_size = Vector2(220, 18)
size_flags_horizontal = 3
show_percentage = false
min_value = 0.0
max_value = 5.0
value = 0.0
theme_override_styles/fill = SubResource(2)
theme_override_styles/background = SubResource(3)

[node name="FishValue" type="Label" parent="TopCenter/Panel/Margin/Stack/FishRow"]
text = "0/5"
theme_override_colors/font_color = Color(1, 0.95, 0.7, 1)

[node name="HealthRow" type="HBoxContainer" parent="TopCenter/Panel/Margin/Stack"]

[node name="HealthLabel" type="Label" parent="TopCenter/Panel/Margin/Stack/HealthRow"]
text = "HEALTH"
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)

[node name="HealthBar" type="ProgressBar" parent="TopCenter/Panel/Margin/Stack/HealthRow"]
custom_minimum_size = Vector2(220, 18)
size_flags_horizontal = 3
show_percentage = false
min_value = 0.0
max_value = 3.0
value = 3.0
theme_override_styles/fill = SubResource(4)
theme_override_styles/background = SubResource(5)

[node name="HealthValue" type="Label" parent="TopCenter/Panel/Margin/Stack/HealthRow"]
text = "3/3"
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -84.0
offset_right = 240.0
offset_bottom = -20.0
text = "YOU GOT EATEN"
horizontal_alignment = 1
vertical_alignment = 1
visible = false
theme_override_colors/font_color = Color(1, 0.32, 0.28, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.04, 0.04, 0.9)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 34

[node name="GameOverPanel" type="PanelContainer" parent="."]
process_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = 140.0
visible = false
theme_override_styles/panel = SubResource(1)

[node name="Margin" type="MarginContainer" parent="GameOverPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="Stack" type="VBoxContainer" parent="GameOverPanel/Margin"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
theme_override_constants/separation = 10

[node name="GameOverLabel" type="Label" parent="GameOverPanel/Margin/Stack"]
text = "YOU GOT EATEN"
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 0.85, 0.78, 1)
theme_override_colors/font_outline_color = Color(0.08, 0.06, 0.06, 0.9)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 28

[node name="RestartButton" type="Button" parent="GameOverPanel/Margin/Stack"]
text = "Restart"

[node name="MenuButton" type="Button" parent="GameOverPanel/Margin/Stack"]
text = "Main Menu"
